TODO
* WINAPI add LIBERROR_OUTPUT_ERROR_INSUFFICIENT_SPACE support
* add tests
* add libcerror_system_copy_string_from_error_number to API?

Notes:
* FormatMessage
  - http://msdn.microsoft.com/en-us/library/windows/desktop/ms679351(v=vs.85).aspx
  - http://blogs.msdn.com/b/oldnewthing/archive/2007/11/28/6564257.aspx

20141125
* updated version for testing

20141116
* updated version for release

20141115
* worked on Travis CI automated testing

20141014
* changes for deployment

20141010
* worked on utility scripts

20141001
* worked on stand-alone libcstring support

20140915
* changes for project site move

20140730
* updated dpkg files

20140505
* fixes to build static library with mingw and cygwin

20140105
* updated dependencies
* 2014 update

20131201
* fixes in backtrace string creation

20131017
* updated libcstring

20130904
* bug fix for issue under memory limitations
* code clean up

20130609
* fix in .pc.in

20130509
* updated common files

20130413
* additional bounds checking

20130411
* added FORMAT_MESSAGE_IGNORE_INSERTS to FormatMessage calls

20130404
* textual changes

20130403
* updated dependencies

20130113
* updated msvscpp files

20130103
* 2013 update
* changes to .gitignore

20121222
* added .gitignore
* changes for new project site

20121107
* changes for warnings in msvscpp 2010 64-bit build

20121018
* fixed read beyound string issue

20120630
* worked on fix for %S in MinGW in system

20120624
* worked on fix for %S in MinGW in system

20120603
* worked on fix for %S in MinGW in error

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* worked on WINAPI fallback functions
* updated man page
* worked on msvscpp files

20120405
* added dpkg files
* added support for pkg-config to configure

20120403
* Worked on stand-alone version
