@@ -1,13 +1,12 @@
 Source: libcerror
-Section: unknown
+Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
-Standards-Version: 3.8.3
+Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libcerror/
 
 Package: libcerror
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libcerror-dbg
@@ -17,14 +16,14 @@ Description: Library to support cross-platform C error functions
 Package: libcerror-dbg
 Architecture: any
 Section: debug
-Depends: libcerror (= ${Source-Version}), ${misc:Depends}
+Depends: libcerror (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libcerror
  Debugging symbols for libcerror.
 
 Package: libcerror-dev
 Section: libdevel
 Architecture: any
-Depends: libcerror (= ${Source-Version})
+Depends: libcerror (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libcerror
  Header files and libraries for developing applications for libcerror.
 
